refactor(router)!: move `/v1/asset/type` to `/v1/asset-types`
